# verbete

./: pyproject.toml  wordle.py
wordle/: session.py  wordle.py
