
[tool.poetry]
name = "wordle-telnet-br"
version = "0.1.0"
description = ""
authors = ["mendelgusmao <mendelsongusmao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Unidecode = "^1.3.2"
telnetlib3 = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
